# fully-heterochronous-f-matrix

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
Rscript/: enumerate.R  enumerate_clean.R  figure2_bijection.R  figure3_coalescence.R  figure4_diag_dyck.R  figure5_top_down.R  figure_enum_3.R  generate_fmatrices_optimized.R  sampling.R  tree plots for ex1 and ex2.R
Rscript/matrix probability under sec4 models/: alpha-beta_likelihood.R  coalescent_likelihood.R
Rscript/simulation R code/: bernoulli_splitting.R  diag_top_down.R  sampling_coales.R  simulation_table.R
Rscript/wrappers/: alpha_beta_likelihoood.R  enumerate.R
dependent model/: bernoulli_large_parameter.R  bernoulli_small_parameter.R  beta2.R  beta2_large_parameter.R  beta2_likelihood.R  beta2_small_parameter.R
dependent model/likelihood for other models/: bernoulli_splitting_smooth.R
python/: f_matrix.py  utils.py
tests/: test_f_matrix.py  test_sampling.py
